# zinc

./: .gitignore  Makefile  README.md  TODO  minify.json  opcodes.md  stack.yaml  tsconfig.json  tslint.json  zinc.cabal
public/: index.html
public/css/: style.css
public/js/: aboutPage.js  button.js  chatHandler.js  game.js  init.js  joinGame.js  main.js  mainMenu.js  mouse.js  newGame.js  player.js  projectile.js  serverSelect.js  util.js
public/ts/: aboutPage.ts  button.ts  chatHandler.ts  game.ts  init.ts  joinGame.ts  mainMenu.ts  mouse.ts  newGame.ts  player.ts  projectile.ts  serverSelect.ts  util.ts
server/: Main.hs
server/lib/: ZincData.hs  ZincServer.hs
server/main/: Main.hs
