name:               zinc
version:            0.1.0
-- synopsis:
-- description:
homepage:           https://www.github.com/AugmentedFifth/zinc#readme
license:            AGPL-3
license-file:       LICENSE
author:             Zachary Comito
maintainer:         zcomito@gmail.com
copyright:          2017 Zachary Comito
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

library
  hs-source-dirs:     server/lib
  exposed-modules:    ZincServer
  build-depends:      base          >= 4.7    && < 5
                    , bytestring    >= 0.9.1  && < 0.11
                    , containers    >= 0.5.10 && < 0.6
                    , lens
                    , monad-control >= 1.0    && < 1.1
                    , mtl           >= 2      && < 3
                    , snap-core     >= 1.0    && < 1.1
                    , snap-server   >= 1.0    && < 1.1
                    , stm
                    , uuid
                    , websockets
                    , websockets-snap
  default-language:   Haskell2010

executable zinc
  hs-source-dirs:     server/main
  main-is:            Main.hs
  ghc-options:        -O2 -funbox-strict-fields -threaded -rtsopts "-with-rtsopts=-N" -Wall -fprint-unicode-syntax -fwarn-tabs

  build-depends:      base >= 4.7 && < 5
                    , zinc

  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://www.github.com/AugmentedFifth/zinc
