name:               zinc
version:            0.1.0
-- synopsis:
-- description:
homepage:           https://www.github.com/AugmentedFifth/zinc
license:            AGPL-3
license-file:       LICENSE
author:             Zachary Comito
maintainer:         zcomito@gmail.com
copyright:          2017 Zachary Comito
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 2.0.0.2

library
  hs-source-dirs:     server/lib
  exposed-modules:    ZincServer
                    , ZincData
  build-depends:      base            >= 4.10.0.0
                    , bytestring      >= 0.10.8.2
                    , cereal          >= 0.5.4.0
                    , containers      >= 0.5.10.2
                    , lens            >= 4.15.4
                    , linear          >= 1.20.7
                    , monad-control   >= 1.0.2.2
                    , mtl             >= 2.2.1
                    , snap-core       >= 1.0.2.1
                    , snap-server     >= 1.0.2.2
                    , stm             >= 2.4.4.1
                    , uuid            >= 1.3.13
                    , websockets      >= 0.12.2.0
                    , websockets-snap >= 0.10.2.3
  default-language:   Haskell2010

executable zinc
  hs-source-dirs:       server/main
  main-is:              Main.hs
  default-extensions:   Strict
  ghc-options:          -O2 -funbox-strict-fields -threaded -rtsopts "-with-rtsopts=-N" -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -fprint-unicode-syntax -fwarn-tabs

  build-depends:        base >= 4.10.0.0
                      , zinc

  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://www.github.com/AugmentedFifth/zinc
